# KMeansCUDA

./: CMakeLists.txt  README.md  cudaKmeans.exp  cudaKmeans.lib  kernel.cu  nvprof_log.txt  nvprof_log_old.txt  performance_log.csv
common/: common.cpp  common.h
resources/: age_satisfaction.csv
